structure improved, projects are now fetched, logic improvements

--- a/index.html
+++ b/index.html
@@ -59,14 +59,9 @@
     <form class="well form-inline">
       <input type="text" class="input-xlarge" placeholder="Add a new task..." />
       <button id="addTask" type="submit" class="btn">Add task</button>
-      <div>
+      <div id="options">
         Client:
-        <select id="select01">
-          <option>something</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
+        <select id="select-client">
         </select>
         Project:
         <select id="select01">
